[package]
name = "components"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
lazy_static = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.2"
futures = "^0.3"

[dependencies.seed]
version = "^0.8"

[dependencies.database-table]
path = "../database-table"

[dependencies.tracing-wasm]
path = "../tracing-wasm"

[dependencies.enum_paths]
path = "../enum_paths"

[dependencies.rql]
path = "../rql"
