[package]
name = "app-model"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "^0.4"
serde_json = "^1"
derive_builder = "^0.9"
lazy_static = "^1"
async-trait = "^0.1"
tracing = "^0.1"
tracing-subscriber = "^0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http = "^0.2"
jsonwebtoken = "^7"
actix-web = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rocket]
version = "^0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.seed]
version = "^0.8"

[dependencies.serde]
version = "^1"
features = [
  "derive",
]

[dependencies.tracing-wasm]
path = "../tracing-wasm"

[dependencies.components]
path = "../components"

[dependencies.openlimits]
path = "../openlimits"

[dependencies.rql]
path = "../rql"

[dependencies.database-table]
path = "../database-table"

[dependencies.enum_paths]
path = "../enum_paths"
