[package]
name = "client"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "^0.4"
tabular = "0.1.2"
nom = "5.0.1"
yew = "0.9.2"
stdweb = "0.4.2"
wasm-bindgen = "0.2"
lazy_static = "1.4"


[dependencies.web-sys]
version = "0.3.27"
features = [
  "Window",
  "Document",
  "HtmlHeadElement",
  "HtmlElement"
]

[dependencies.server]
version = "*"
path = "../server"
