[package]
name = "client"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
lazy_static = "^1.4"
chrono = "^0.4"
serde = "^1"
serde_json = "^1"
futures = "^0.3"
wasm-bindgen-futures = "^0.4"
url = "^2"
async-tls = "^0.9"
console_error_panic_hook = "^0.1"
rand = "^0.7"

[dependencies.seed]
git = "https://github.com/seed-rs/seed"
branch = "master"

[dependencies.components]
path = "../../components"

[dependencies.wasm-bindgen]
version = "^0.2"
features = [
  'serde-serialize',
]
