[package]
name = "database-table"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1"
serde = "^1"
async-trait = "^0.1"

[dependencies.seed]
version = "^0.8"

[dependencies.rql]
path = "../rql"

[dependencies.enum_paths]
path = "../enum_paths"
