[package]
name = "database"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1"
serde = "^1"
lazy_static = "^1.4"

[dependencies.rql]
path = "../../rql"

[dependencies.plans]
path = "../plans"

[dependencies.updatable]
path = "../updatable"
