[package]
name = "derive_updatable"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "^1"
proc-macro2 = "^1"

[dependencies.syn]
version = "^1"
features = [
  "derive",
]
