[package]
name = "interpreter"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^5.1"
#linefeed = "0.6"
#termion = "1.5"
itertools = "0.8"
chrono = "^0.4"
