[package]
name = "interpreter"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^5.1"
itertools = "0.8"
chrono = "^0.4"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
termion = "1.5"
linefeed = "0.6"
