[package]
name = "plans"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
tabular = "0.1.2"
daggy = "0.6.0"
chrono = "^0.4"
serde_json = "^1"
derive_builder = "^0.9"


[dependencies.serde]
version = "^1"
features = [
  "derive",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.2"

[dependencies.interpreter]
path = "../interpreter"

[dependencies.updatable]
path = "../updatable"
