[package]
name = "plans"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "^0.4"
serde_json = "^1"
derive_builder = "^0.9"
rocket = "^0.4"
jsonwebtoken = "^5"
lazy_static = "^1.4"

[dependencies.serde]
version = "^1"
features = [
  "derive",
]

[dependencies.updatable]
path = "../updatable"
