[package]
name = "seqraph-server"
version = "0.1.0"
edition = "2018"
default-run = "server"

[workspace]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde_json = "^1"
openssl = "0.10"
clap = "^2"
lazy_static = "^1.4"
tracing = "^0.1"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2"
const_format = "*"
seqraph = { path = "../seqraph" }

[dependencies.async-std]
features = ["attributes"]
version = "^1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.futures]
version = "0.3"

[dependencies.futures-core]
version = "^0.3"

[dependencies.futures-util]
version = "^0.3"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.tokio]
features = ["fs", "time", "rt-multi-thread", "macros"]
version = "^1"

[dependencies.tokio-util]
features = ["compat"]
version = "^0.3"

[dependencies.tracing-log]
version = "^0.1"

[dependencies.tide]
features = ["h1-server"]
version = "0.16"

[dependencies.tide-rustls]
version = "0.3"

[dependencies.tide-tracing]
version = "*"

[dependencies.tide-websockets]
path = "../../tide-websockets"