[package]
name = "seqraph"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[dependencies]
lazy_static = "^1.4"
serde_json = "^1"
num-traits = "^0.2"
tracing = "^0.1"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2"
tracing-test = "^0.1"
maplit = "^1"
indexmap = "^1.6"
either = "^1.6"
async-std = "^1"
async-trait = "^0.1"
futures = "^0.3"
pin-project-lite = "^0.2"

[dependencies.pretty_assertions]
version = "^1"
features = [
  "unstable",
]
[dependencies.serde]
version = "^1"
features = [
  "derive",
]
[dependencies.petgraph]
#version = "^0.5"
path = "../../petgraph"

[dependencies.nalgebra]
version = "^0.24"
#path = "../../nalgebra"

[dependencies.itertools]
version = "0.10"
#path = "../../itertools"

[dependencies.tokio]
version = "^1"
features = [
  "sync",
  "rt",
  "rt-multi-thread",
  "macros",
]

[dependencies.tokio-stream]
version = "^0.1"
features = [
  "sync",
  "time",
  "io-util",
]
