[package]
name = "server"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
serde = "1.0.114"
serde_json = "1.0.56"
anyhow = "1.0.31"
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = [
  "json",
  "uuid",
]

[dependencies.define_api]
path = "./define_api"

[dependencies.rql]
path = "../../rql"

[dependencies.app-model]
path = "../../app-model"

[dependencies.database-table]
path = "../../database-table"

[dependencies.api]
path = "./api"
