[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
default-run = "server"
name = "binance-bot"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = []

tide_server = ["tide", "tide-tracing", "tide-rustls"]

actix_server = [
  "actix-files",
  "actix-web",
  "actix-web-actors",
  "tracing-actix-web",
]

[dependencies]
lazy_static = "^1.4"
serde_json = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.2"
async-h1 = "^2"
clap = "^2"
regex = "^1.3"
telegram-bot = "^0.7"
tracing-appender = "^0.1"
openssl = "0.10"
log = "0.4"
riker = "0.4"

tide = { version = "0.14", optional = true }
tide-tracing = { version = "0.0.6", optional = true }
tide-rustls = { version = "0.1.3", optional = true }

actix = "0.10"
actix-files = { version = "0.4", optional = true }
actix-web-actors = { version = "3", optional = true }
tracing-actix-web = { version = "0.2", optional = true }


[dependencies.shared]
path = "../shared"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.futures]
version = "0.3"

[dependencies.futures-core]
version = "^0.3"

[dependencies.openlimits]
path = "../../openlimits"

[dependencies.app-model]
path = "../../app-model"

[dependencies.database-table]
path = "../../database-table"

[dependencies.rql]
path = "../../rql"

[dependencies.enum_paths]
path = "../../enum_paths"

[dependencies.serde]
version = "^1"
features = [
  "derive",
]
[dependencies.actix-interop]
git = "https://github.com/Diggsey/actix-interop"
branch = "master"

[dependencies.actix-web]
version = "3"
optional = true
features = [
  "openssl",
  "secure-cookies",
]

[dependencies.async-std]
version = "^1"
features = [
  "attributes",
]

[dependencies.tracing-log]
version = "^0.1"


[dependencies.tokio]
version = "^0.2"
features = [
  "fs",
  "rt-threaded",
  "tcp",
  "stream",
  "macros",
]
[dependencies.tokio-util]
version = "^0.3"
features = [
  "compat",
]
