[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
default-run = "server"
edition = "2018"
name = "binance-bot"
version = "0.1.0"
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.10"
async-h1 = "^2"
clap = "^2"
const_format = "*"
hex = "^0.4"
lazy_static = "^1.4"
log = "0.4"
openssl = "0.10"
regex = "^1.3"
riker = "0.4"
serde_json = "^1"
sha2 = "^0.9"
static_assertions = "^1"
telegram-bot = "^0.7"
tracing = "^0.1"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2"

[dependencies.actix-files]
optional = true
version = "0.4"

[dependencies.actix-interop]
branch = "master"
git = "https://github.com/Diggsey/actix-interop"

[dependencies.actix-web]
features = ["openssl", "secure-cookies"]
optional = true
version = "3"

[dependencies.actix-web-actors]
optional = true
version = "3"

[dependencies.app-model]
path = "../../app-model"

[dependencies.async-std]
features = ["attributes"]
version = "^1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.database-table]
path = "../../database-table"

[dependencies.enum_paths]
path = "../../enum_paths"

[dependencies.futures]
version = "0.3"

[dependencies.futures-core]
version = "^0.3"

[dependencies.futures-util]
version = "^0.3"

[dependencies.openlimits]
path = "../../openlimits"

[dependencies.rql]
path = "../../rql"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.shared]
path = "../shared"

[dependencies.tide]
optional = true
version = "0.15"

[dependencies.tide-rustls]
optional = true
version = "^0.1"

[dependencies.tide-tracing]
optional = true
version = "0.0.7"

[dependencies.tide-websockets]
optional = true
path = "../../tide-websockets"

[dependencies.tokio]
features = ["fs", "time", "rt-threaded", "tcp", "stream", "macros"]
version = "^0.2"

[dependencies.tokio-util]
features = ["compat"]
version = "^0.3"

[dependencies.tracing-actix-web]
optional = true
version = "0.2"

[dependencies.tracing-log]
version = "^0.1"

[dependencies.warp]
features = ["tls"]
optional = true
version = "^0.2"

[features]
actix_server = ["actix-files", "actix-web", "actix-web-actors", "tracing-actix-web"]
default = ["tide_server"]
tide_server = ["tide", "tide-tracing", "tide-rustls", "tide-websockets"]
warp_server = ["warp"]
