[package]
name = "session-service"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
sha2 = "^0.9"
tracing = "^0.1"
lazy_static = "^1.4"
hex = "^0.4"

[dependencies.rql]
path = "../../rql"

[dependencies.app-model]
path = "../app-model"

[dependencies.async-std]
features = ["attributes"]
version = "^1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.tokio]
features = ["time"]
version = "^1"
