[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
default-run = "server"
edition = "2018"
name = "binance-bot"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-h1 = "^2"
clap = "^2"
const_format = "*"
hex = "^0.4"
lazy_static = "^1.4"
log = "0.4"
openssl = "0.10"
regex = "^1.3"
serde_json = "^1"
sha2 = "^0.9"
static_assertions = "^1"
tracing = "^0.1"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2"

[dependencies.telegram-bot]
#version = "^0.8"
git = "https://github.com/Mephistophiles/telegram-bot"

[dependencies.riker]
#version = "^0.4"
path = "../../../riker"
features = ["tokio_executor"]

[dependencies.app-model]
path = "../../app-model"

[dependencies.async-std]
features = ["attributes"]
version = "^1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.database-table]
path = "../../database-table"

[dependencies.enum_paths]
path = "../../../enum_paths"

[dependencies.futures]
version = "0.3"

[dependencies.futures-core]
version = "^0.3"

[dependencies.futures-util]
version = "^0.3"

[dependencies.openlimits]
path = "../../../openlimits"

[dependencies.rql]
path = "../../../rql"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.shared]
path = "../shared"

[dependencies.tide]
#version = "0.15"
path = "../../../tide"
features = [
  "h1-server",
]

[dependencies.tide-rustls]
#version = "^0.1"
path = "../../../tide-rustls"

[dependencies.tide-tracing]
#version = "0.0.7"
path = "../../../tide-tracing"

[dependencies.tide-websockets]
path = "../../../tide-websockets"

[dependencies.tokio]
version = "^1"
features = [
  "fs",
  "time",
  "rt-multi-thread",
  "macros",
]

[dependencies.tokio-util]
features = ["compat"]
version = "^0.3"

[dependencies.tracing-log]
version = "^0.1"
