[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
default-run = "server"
edition = "2018"
name = "binance-bot"
version = "0.1.0"
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-h1 = "^2"
async-trait = "*"
clap = "^2"
const_format = "*"
derive_more = "*"
lazy_static = "^1.4"
log = "0.4"
openssl = "0.10"
regex = "^1.3"
serde_json = "^1"
static_assertions = "^1"
tracing = "^0.1"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2"

[dependencies.openlimits]
path = "../../../openlimits"
#version = "^0.1"

[dependencies.app-model]
path = "../../app-model"

[dependencies.async-std]
features = ["attributes", "tokio1"]
version = "^1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.database-table]
path = "../../database-table"

[dependencies.enum_paths]
path = "../../../enum_paths"

[dependencies.futures]
version = "0.3"

[dependencies.futures-core]
version = "^0.3"

[dependencies.futures-util]
version = "^0.3"

[dependencies.riker]
path = "../../../riker"
features = ["tokio_executor"]

[dependencies.rql]
path = "../../../rql"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.shared]
path = "../shared"

[dependencies.telegram-bot]
git = "https://github.com/Mephistophiles/telegram-bot"

[dependencies.tide]
features = ["h1-server"]
path = "../../../tide"

[dependencies.tide-rustls]
path = "../../../tide-rustls"

[dependencies.tide-tracing]
path = "../../../tide-tracing"

[dependencies.tide-websockets]
path = "../../../tide-websockets"

[dependencies.session-service]
path = "../../session-service"

[dependencies.tokio]
features = ["fs", "time", "rt-multi-thread", "macros"]
version = "^1"

[dependencies.tokio-util]
features = ["compat"]
version = "^0.6"

[dependencies.tracing-log]
version = "^0.1"
