[package]
name = "api"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1.0"
lazy_static = "^1.4"
async-trait = "^0.1"
futures = "^0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rocket]
version = "^0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rocket_contrib]
version = "^0.4"
default-features = false
features = [
  "json",
  "uuid",
]
[target.'cfg(target_arch = "wasm32")'.dependencies.seed]
version = "^0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies.components]
path = "../../components"

[dependencies.define_api]
path = "../../define_api"

[dependencies.interpreter]
path = "../../interpreter"

[dependencies.seqraph]
path = "../../seqraph"

[dependencies.rql]
path = "../../../rql"

[dependencies.enum_paths]
path = "../../../enum_paths"

[dependencies.app-model]
path = "../../app-model"

[dependencies.database-table]
path = "../../database-table"

[dependencies.updatable]
path = "../../../updatable"
