[package]
name = "server"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
serde = "1.0.114"
serde_json = "1.0.56"
anyhow = "1.0.31"

[dependencies.tide]
#version = "0.15"
path = "../../../tide"
features = [
  "h1-server",
]

[dependencies.tide-rustls]
#version = "^0.1"
path = "../../../tide-rustls"

[dependencies.tide-tracing]
#version = "0.0.7"
path = "../../../tide-tracing"

[dependencies.tide-websockets]
path = "../../../tide-websockets"

[dependencies.define_api]
path = "../../define_api"

[dependencies.api]
path = "../api"

[dependencies.rql]
path = "../../../rql"

[dependencies.app-model]
path = "../../app-model"

[dependencies.database-table]
path = "../../../database-table"

