[package]
name = "client"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[workspace]
members = []

[dependencies]
lazy_static = "^1.4"
serde_json = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.2"
console_error_panic_hook = "^0.1"
url = "^2"
wasm-bindgen-futures = "^0.4"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.components]
path = "../../components"

[dependencies.seed]
version = "^0.8"

[dependencies.web-sys]
version = "^0.3"
features = [
  "MutationObserver",
  "MutationRecord",
  "Node",
  "Document",
  "Window",
]

[dependencies.tracing-wasm]
path = "../../../tracing-wasm"
