[package]
name = "api"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1.0"
seed = "^0.7"
rocket = "^0.4"

[dependencies.rocket_contrib]
version = "^0.4"
default-features = false
features = [
  "json",
  "uuid",
]

[dependencies.define_api]
path = "../define_api"

[dependencies.rql]
path = "../../../rql"

[dependencies.plans]
path = "../../plans"

[dependencies.database]
path = "../../database"

[dependencies.updatable]
path = "../../updatable"
