[package]
name = "api"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1.0"
rocket = "^0.4"
lazy_static = "^1.4"
async-trait = "^0.1"
futures = "^0.3"

[dependencies.seed]
git = "https://github.com/seed-rs/seed"
branch = "master"

[dependencies.rocket_contrib]
version = "^0.4"
default-features = false
features = [
  "json",
  "uuid",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.components]
path = "../../../components"

[dependencies.enum_paths]
path = "../../../enum_paths"

[dependencies.define_api]
path = "../define_api"

[dependencies.rql]
path = "../../../rql"

[dependencies.app-model]
path = "../../../app-model"

[dependencies.database-table]
path = "../../../database-table"

[dependencies.updatable]
path = "../../../updatable"

[dependencies.interpreter]
path = "../../interpreter"

[dependencies.seqraph]
path = "../../interpreter/seqraph"
