[package]
name = "client"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
chrono = "^0.4"
serde = "^1"
serde_json = "^1"
http = "^0.2"
anyhow = "^1"
futures = "^0.3"
wasm-bindgen-futures = "^0.4"
url = "^2"
seed = "^0.7"
lazy_static = "^1.4"

[dependencies.wasm-bindgen]
version = "^0.2"
features = [
  'serde-serialize',
]

[dependencies.rql]
path = "../../../rql"

[dependencies.plans]
path = "../../plans"

[dependencies.budget]
path = "../../budget"

[dependencies.updatable]
path = "../../updatable"

[dependencies.database]
path = "../../database"
