[package]
name = "client"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
lazy_static = "^1.4"
chrono = "^0.4"
serde = "^1"
serde_json = "^1"
anyhow = "^1"
futures = "^0.3"
wasm-bindgen-futures = "^0.4"
url = "^2"
async-trait = "^0.1"
console_error_panic_hook = "^0.1"

[dependencies.seed]
git = "https://github.com/seed-rs/seed"
branch = "master"

[dependencies.wasm-bindgen]
version = "^0.2"
features = [
  'serde-serialize',
]

[dependencies.components]
path = "../../../components"

[dependencies.rql]
path = "../../../rql"

[dependencies.plans]
path = "../../plans"

[dependencies.database]
path = "../../database"

[dependencies.updatable]
path = "../../updatable"

[dependencies.interpreter]
path = "../../interpreter"

[dependencies.seqraph]
path = "../../interpreter/seqraph"

[dependencies.api]
path = "../api"
