[package]
name = "common"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
stdweb = "^0.4"
serde_json = "^1"
http = "^0.2"
anyhow = "^1"

[dependencies.yew]
version = "^0.14"
features = [
  "std_web"
]
