[package]
name = "common"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "^0.4"
futures = "^0.3"
url = "^2"
js-sys = "^0.3"
stdweb = "^0.4"
serde_json = "^1"
serde = "^1"
http = "^0.2"
anyhow = "^1"

[dependencies.yew]
version = "^0.15"
package = "yew-stdweb"

[dependencies.wasm-bindgen]
version = "^0.2"
features = [
  'serde-serialize',
]
[dependencies.web-sys]
version = "^0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dependencies.rql]
path = "../../../rql"
